--- a/Webapp/Webapp.csproj
+++ b/Webapp/Webapp.csproj
@@ -1,12 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp3.1</TargetFrameworks>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="bootstrap" Version="5.1.0" />
-    <PackageReference Include="JQ.NET" Version="1.0.4" />
     <PackageReference Include="jQuery" Version="3.6.0" />
   </ItemGroup>
 
