--- a/Webapp/Webapp.csproj
+++ b/Webapp/Webapp.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="bootstrap" Version="5.1.0" />
     <PackageReference Include="jQuery" Version="3.6.0" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.7" />
   </ItemGroup>
 
 </Project>
