--- a/Webapp/Webapp.csproj
+++ b/Webapp/Webapp.csproj
@@ -1,3 +1,4 @@
+<!-- -*-xml-*- -->
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
@@ -6,8 +7,9 @@
 
   <ItemGroup>
     <PackageReference Include="bootstrap" Version="5.1.0" />
-    <PackageReference Include="JQ.NET" Version="1.0.4" />
     <PackageReference Include="jQuery" Version="3.6.0" />
+    <PackageReference Include="Newtonsoft.JSON" Version="13.0.1" />
+    <PackageReference Include="Rick.Docs.Samples.RouteInfo" Version="1.0.0.4" />
   </ItemGroup>
 
 </Project>
