--- a/Webapp/appsettings.json
+++ b/Webapp/appsettings.json
@@ -1,10 +1,11 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Information",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "AllowedHosts": "*"
+    "Logging": {
+	"LogLevel": {
+	    "Default": "Information",
+	    "Microsoft": "Warning",
+	    "Microsoft.Hosting.Lifetime": "Information"
+	}
+    },
+    "AllowedHosts": "*",
+    "app_run_miljö": "appsettings.json: produktion"
 }
