--- a/Webapp/Properties/launchSettings.json
+++ b/Webapp/Properties/launchSettings.json
@@ -12,16 +12,25 @@
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+	"ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
     "Webapp": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "applicationUrl": "http://localhost:5000;https://localhost:5001",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+	  "ASPNETCORE_ENVIRONMENT": ""
+      }
+    },
+    "Webapp-dev": {
+      "commandName": "Project",
+      "dotnetRunMessages": "true",
+      "launchBrowser": true,
+      "applicationUrl": "http://localhost:5000;https://localhost:5001",
+      "environmentVariables": {
+	"ASPNETCORE_ENVIRONMENT": "Development"
       }
     }
   }
