inhämtning från uppgift 1

--- a/Webapp/Webapp.csproj
+++ b/Webapp/Webapp.csproj
@@ -7,7 +7,9 @@
   <ItemGroup>
     <PackageReference Include="bootstrap" Version="5.1.0" />
     <PackageReference Include="jQuery" Version="3.6.0" />
+    <PackageReference Include="Newtonsoft.JSON" Version="13.0.1" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.7" />
+    <PackageReference Include="Rick.Docs.Samples.RouteInfo" Version="1.0.0.4" />
   </ItemGroup>
 
 </Project>
