--- a/Webapp/Properties/launchSettings.json
+++ b/Webapp/Properties/launchSettings.json
@@ -19,7 +19,16 @@
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:5003;http://localhost:5002",
+      "applicationUrl": "http://localhost:5002;https://localhost:5003",
+      "environmentVariables": {
+	"ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
+    "Webapp-dev": {
+      "commandName": "Project",
+      "dotnetRunMessages": "true",
+      "launchBrowser": true,
+      "applicationUrl": "http://localhost:5002;https://localhost:5003",
       "environmentVariables": {
 	"ASPNETCORE_ENVIRONMENT": "Development"
       }
