--- a/Webapp/Properties/launchSettings.json
+++ b/Webapp/Properties/launchSettings.json
@@ -21,7 +21,7 @@
       "launchBrowser": true,
       "applicationUrl": "http://localhost:5002;https://localhost:5003",
       "environmentVariables": {
-	"ASPNETCORE_ENVIRONMENT": "Development"
+	"ASPNETCORE_ENVIRONMENT": ""
       }
     },
     "Webapp-dev": {
