--- a/Webapp/appsettings.Development.json
+++ b/Webapp/appsettings.Development.json
@@ -6,5 +6,6 @@
 	    "Microsoft.Hosting.Lifetime": "Information"
 	}
     },
-    "app_run_miljö": "appsettings.json: utveckling"
+    "app_run_miljö": "appsettings.json: utveckling",
+    "session_kakans_namn":  "gissatal.netcore3.1.fakirenstenstorp.st"
 }
