--- a/Webapp/appsettings.json
+++ b/Webapp/appsettings.json
@@ -7,5 +7,6 @@
 	}
     },
     "AllowedHosts": "*",
-    "app_run_miljö": "appsettings.json: produktion"
+    "app_run_miljö": "appsettings.json: produktion",
+    "session_kakans_namn":  "gissatal.netcore3.1.fakirenstenstorp.st"
 }
