session-kakan: välj dess namn via Webapp/appsettings.*json
förklaring till användning av cookie.essential i startup.cs

arrangera så att det går att på kakan se om det är test/dev eller
drift

--- a/Webapp/appsettings.Development.json
+++ b/Webapp/appsettings.Development.json
@@ -7,5 +7,5 @@
 	}
     },
     "app_run_miljö": "appsettings.json: utveckling",
-    "session_kakans_namn":  "gissatal.netcore3.1.fakirenstenstorp.st"
+    "session_kakans_namn":  "test.gissatal.netcore3.1.fakirenstenstorp.st"
 }
